--- a/public/screen.css
+++ b/public/screen.css
@@ -9,4 +9,87 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+  background-color: rgb(241, 159, 35);
+}
+
+h1 {
+ padding-top: 1rem;
+  font-family: 'Times New Roman', Times;
+  font-size: 3rem;
+  color: rgb(31, 24, 11);
+  text-align: center;
+}
+
+.articles {
+  list-style: none;
+  background-color: rgb(248, 133, 9);
+  color: azure;
+  font-family: Georgia, serif;
+  font-size: 1.2rem;
+}
+
+.articles ul {
+  display: flex;
+  padding: 1rem;
+  justify-content: space-around;
+  list-style: none;
+}
+.articles a {
+  color: azure;
+}
+
+header {
+  color: grey;
+  text-align: right;
+
+}
+
+main {
+  display: flex;
+  padding: 2rem;
+  justify-content: center;
+}
+img {
+  width: 600px;
+  padding: 2rem 2rem 0rem 2rem;
+}
+aside {
+  border: 0.5rem solid rgb(248, 133, 9);
+}
+h4 {
+  text-align: center;
+  font-size: 2rem;
+ 
+}
+aside ul {
+  margin: 0rem 0rem 1rem 8rem;
+  font-size: 1.5rem;
+  line-height: 1.5;
+}
+
+div {
+  font-size: 1.5rem;
+  padding: 0rem 1rem 0rem 3rem;
+}
+
+footer {
+  background-color: rgb(199, 196, 196);
+  text-align: center;
+
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  padding-bottom: 1rem;
+}
+
+.more ul {
+  font-size: larger;
+  display: flex;
+  padding: 1rem;
+  justify-content: space-around;
+  list-style: none;
+}
+.more a {
+  color: rgb(68, 67, 67);
 }
